--- a/Shop.Web/Web.config
+++ b/Shop.Web/Web.config
@@ -8,6 +8,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+		<connectionStrings>
+		<add name="ShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=LINHDD-PC;Initial Catalog=Shop;Integrated Security=False;User Id=sa;Password=123456;MultipleActiveResultSets=True" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
