--- a/Shop.Web/Shop.Web.csproj
+++ b/Shop.Web/Shop.Web.csproj
@@ -169,6 +169,7 @@
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="TestGit\gitjavascriptTest.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
